--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
-  "homepage":"/",
+  "homepage": "/",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.9.13",
@@ -19,7 +19,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "serve": "^11.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
