--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
-  "homepage": "/",
+    "homepage": "https://alanmauricioc.github.io",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.9.13",
@@ -15,6 +15,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "gh-pages": "^4.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -26,7 +27,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+      "eject": "react-scripts eject",
+      "predeploy":"yarn run build",
+      "deploy":"gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
